2011-06-27  theron	<theron@netcitadel.com>

	* Fixed #2530, where adding a subfolder opens the parent folder in
	the object editor.

	* Fixed #2529, where dragging and dropping items between
	subfolders could cause a crash.

	* Fixed #2528, display icon next to "new subfolder" menu item.

	* Added feature #2517: directory location caching.  Use
	FWBSettings::{get|set}OpenFileDir() any time we use QFileDialog so
	that the directory you navigated to last time shows up in the next
	file dialog.  This behavior is overridden by setting a working
	directory.  If the directory no longer exists, gracefully fall
	back to something sensible.

2011-06-23  theron	<theron@netcitadel.com>

	* Added support for creating user-defined subfolders.  The
	subfolders exist purely in the display and are not reflected in
	the FWObject tree, in order to keep changes in the back-end to a
	minimum.  New attribute "subfolders" on a system folder tells the
	gui what additional child elements to display in the tree, and
	attribute "folder" on any FWObject tells gui which child tree
	element to put it in.

2011-06-22  Vadim Kurland  <vadim@netcitadel.com>

	* ObjectManipulator_ops.cpp (autorename): fixed #2520 "Attached
	Network objects are not renamed if a firewall is renamed"

	* AttachedNetworksDialog.cpp (addAddressToList): see #2519 Avoid
	creating duplicate network objects for the AttachedNetwork object
	if the parent interface has multiple ip addresses that belong to
	the same subnet.

	* CompilerDriver.cpp (CompilerDriver): fixed #2521 "Compile fails
	if firewall has locked interface that is set to dynamic".

	* NATCompiler_pf_writers.cpp (_printProtocol): see #2524 'avoid
	" {tcp udp icmp} " in place of protocol'. NAT compiler for PF does
	not need to generate protocol match "proto {tcp udp icmp}" when
	service object used in the NAT rule is "any". The reason this was
	done this way is lost in the mist of time; it's been like this
	since very early versions of fwbuilder.
